--- a/everyAyah.ui
+++ b/everyAyah.ui
@@ -28,10 +28,10 @@
         <height>22</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">combobox-popup: 0;</string>
+      </property>
      </widget>
-     <zorder>groupBox</zorder>
-     <zorder>groupBox</zorder>
-     <zorder>surahComboBox</zorder>
     </widget>
    </item>
    <item row="0" column="1">
@@ -106,6 +106,9 @@
         <width>151</width>
         <height>22</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">combobox-popup: 0;</string>
       </property>
       <item>
        <property name="text">
